--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -5,4 +5,9 @@
     transition: all 0.5s ease-in-out;
 }
 
+.cover-center {
+    object-fit: cover;
+    object-position: center;
+}
+
 @tailwind utilities;
